--- a/index.html
+++ b/index.html
@@ -273,20 +273,34 @@
 		<script>
 		$(".acc__panel").hide();
 		$(function() {
-		$('.acc__title').click(function(j) {
-			var dropDown = $(this).closest('.projectArchive').find('.acc__panel');
-			// $(this).closest('.acc').find('.acc__panel').not(dropDown).slideUp();
-			
-			if ($(this).hasClass('active')) {
-			$(this).removeClass('active');
-			} 
-			else {
-			$(this).closest('.acc').find('.acc__title.active').removeClass('active');
-			$(this).addClass('active');
-			}
-			dropDown.stop(false, true).slideToggle();
-			j.preventDefault();
-		});
+			$('.acc__title').click(function(j) {
+				var dropDown = $(this).closest('.projectArchive').find('.acc__panel');
+				// $(this).closest('.acc').find('.acc__panel').not(dropDown).slideUp();
+				
+				if ($(this).hasClass('active')) {
+				$(this).removeClass('active');
+				} 
+				else {
+				$(this).closest('.acc').find('.acc__title.active').removeClass('active');
+				$(this).addClass('active');
+				}
+				dropDown.stop(false, true).slideToggle();
+				j.preventDefault();
+			});
+			$('.subtitle').click(function(j) {
+				var dropDown = $(this).closest('.projectArchive').find('.acc__panel');
+				// $(this).closest('.acc').find('.acc__panel').not(dropDown).slideUp();
+				
+				if ($(this).hasClass('active')) {
+				$(this).removeClass('active');
+				} 
+				else {
+				$(this).closest('.acc').find('.acc__title.active').removeClass('active');
+				$(this).addClass('active');
+				}
+				dropDown.stop(false, true).slideToggle();
+				j.preventDefault();
+			});
 		});
 		</script>
     </body>
