mobile responsive changes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  
 		
 		<title>Benjamin Dinh</title>
-		<link rel="icon" href="assets/favicon.png">
+		<link rel="icon" href="assets/faviconnew.png">
     </head>
     
 	<body>
