temp hide about section

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item">
-							<a class="nav-link js-scroll-trigger" href="/about">About</a>
+							<a class="nav-link js-scroll-trigger" href="#anchor">Work</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link js-scroll-trigger" href="#anchor">Work</a>
+							<a class="nav-link js-scroll-trigger" href="#about">About</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link js-scroll-trigger categorytag" href="assets/BenjaminDinhResume.pdf">Resume</a>
@@ -58,8 +58,8 @@
 				<a class="categorytag" id="headertag" href="mailto:benjamindinh909@gmail.com">Get In Touch</a>
 			</div>
 		</section>
-		<div class="arrow bounce" id="anchor">
-			<a href = "#anchor" class="fa fa-angle-down fa-3x"></a>
+		<div class="arrow bounce" id="work">
+			<a href = "#work" class="fa fa-angle-down fa-3x"></a>
 		</div>
 		<section id="projects">
 			<p id = "projectSectionTitle">RECENTS</p>
@@ -250,6 +250,10 @@
 			  	</div>
 			</div>	
 		</section>
+<!-- 
+		<section id="about">
+			<p id = "projectSectionTitle">ABOUT ME</p>
+		</section>> -->
 		
 		<section id="footer">
 			<div id="bottomIcons">
