--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item">
-							<a class="nav-link js-scroll-trigger" href="#anchor">Work</a>
+							<a class="nav-link js-scroll-trigger" href="#work">Work</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link js-scroll-trigger" href="#about">About</a>
@@ -58,10 +58,11 @@
 				<a class="categorytag" id="headertag" href="mailto:benjamindinh909@gmail.com">Get In Touch</a>
 			</div>
 		</section>
-		<div class="arrow bounce" id="work">
-			<a href = "#work" class="fa fa-angle-down fa-3x"></a>
+		<div class="arrow bounce">
+				<a href = "#work" class="fa fa-angle-down fa-3x"></a>
 		</div>
-		<section id="projects">
+		<a id="work"></a>
+		<section>
 			<p id = "projectSectionTitle">RECENTS</p>
 			<div id="projectContainer">
 				<div class="row">
@@ -146,7 +147,7 @@
 			</div>
 		</section>
 		<section id="archive">
-			<p id = "projectSectionTitle">SOME MORE FUN PROJECTS</p>
+			<p id = "projectSectionTitle">MORE FUN PROJECTS</p>
 			<div id = "projectArchiveContainer">
 				<div class="acc">
 					<div class="projectArchive">
@@ -250,10 +251,22 @@
 			  	</div>
 			</div>	
 		</section>
-<!-- 
+
 		<section id="about">
 			<p id = "projectSectionTitle">ABOUT ME</p>
-		</section>> -->
+			<div id="profileContainer">
+				<div id="profileText">
+					<h2 class="increaseLineHeight">Nice to meet you!</h2>
+					<p class="subtitle">I'm Benjamin and I'm a third year at University of California, Davis studying Computer Science with an intended minor in Communications. My interests lie in making technology widely accessible and delivering unique product experiences.</p>
+					<p class="subtitle">It has been a long-standing goal of mine to use technology for the greater social good. In an age of social media, it can be overwhelming to see software exploit human tendencies. I want to turn this around and build products that will enhance user experiences and truly make our lives better.</p>
+					<p class="subtitle">Away from the computer, you likely find me cuddling with my cat Tigger, drinking an iced latte, or eating lots of yummy food.</p>
+					<p class="subtitle">Say hi over on <a class="hoverBold" href="https://www.linkedin.com/in/benjamin-dinh/">LinkedIn</a> or <a class="hoverBold" href="mailto:benjamindinh909@gmail.com">email</a>, I would love to chat!</p>
+				</div>
+				<div id="profileImage" >
+					<img src="assets/headshot.jpg" class="rounded-circle circleShadow" alt="Benjamin Dinh">
+				</div>
+			</div>
+		</section>
 		
 		<section id="footer">
 			<div id="bottomIcons">
