--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 							</div>
 							<div class="projectbuttons">
 								<a class="fa fa-github" href="https://github.com/benjamin-dinh/IETAndroidAppProject"></a>
-								<a class="fa fa-external-link-square" href="https://drive.google.com/file/d/1vH078U3TXIbzWwnw4dqZkSJPtS7ijEUe/view?usp=sharing"></a>
+								<!-- <a class="fa fa-external-link-square" href="https://drive.google.com/file/d/1vH078U3TXIbzWwnw4dqZkSJPtS7ijEUe/view?usp=sharing"></a> -->
 							</div>
 						</div>
 					</div>
@@ -139,7 +139,7 @@
 							</div>
 							<div class="projectbuttons">
 								<a class="fa fa-github" href="https://github.com/benjamin-dinh/ucdavis-yearbook"></a>
-								<a class="fa fa-external-link-square" href="hazel-boundless-yearbook.glitch.me"></a>
+								<a class="fa fa-external-link-square" href="https://hazel-boundless-yearbook.glitch.me"></a>
 							</div>
 						</div>
 					</div>
@@ -192,7 +192,7 @@
 								</div>
 								<div class="projectbuttons">
 									<a class="fa fa-github" href="https://github.com/benjamin-dinh/museum-website"></a>
-									<a class="fa fa-external-link-square" href="shore-conscious-supply.glitch.me/"></a>
+									<a class="fa fa-external-link-square" href="https://shore-conscious-supply.glitch.me/"></a>
 								</div>
 							</div>
 						</div>
@@ -229,7 +229,7 @@
 								</div>
 								<div class="projectbuttons">
 									<a class="fa fa-github" href="https://github.com/benjamin-dinh/postcard-creator-v2"></a>
-									<a class="fa fa-external-link-square" href="foggy-climbing-carob.glitch.me/"></a>
+									<a class="fa fa-external-link-square" href="https://foggy-climbing-carob.glitch.me/"></a>
 								</div>
 							</div>
 						</div>
