--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<body>
 		<div id='navigationContainer'>
 			<nav class="navbar navbar-fixed-top navbar-expand-lg navbar-light">
-				<a class="navbar-brand js-scroll-trigger" id="navigationName" href="/">Benjamin Dinh</a>
+				<a class="navbar-brand js-scroll-trigger" id="navigationName">Benjamin Dinh</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
