mobile mobile mobile

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 				<div class="row">
 					<div class = projectSelect>
 						<div>
-							<h2>includedavis</h2>
+							<h2>includedavis.com</h2>
 							<p class="subtitle_bold">A user focused redesign of #include's club website</p>
 							<p class="subtitle_date">AUGUST 2020</p>
 							<p class="subtitle">Communicated with the lead designer to understand necessary revisions to improve the usability, look, and feel of the old website. Worked with the back end director and achieved a new landing page, club calendar, testimonial section, and mobile responsivity.</p>
