--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 						</div>
 						<div class="buttonrow">
 							<div class ="tagrow">
-								<div class="projecttag">React</div>
+								<div class="projecttag">ReactJS</div>
 								<div class="projecttag">NodeJS</div>
 								<div class="projecttag">Figma</div>
 							</div>
@@ -259,7 +259,7 @@
 					<h2 class="increaseLineHeight">Nice to meet you!</h2>
 					<p class="subtitle">I'm Benjamin and I'm a third year at University of California, Davis studying Computer Science with an intended minor in Communications. My interests lie in making technology widely accessible and delivering unique product experiences.</p>
 					<p class="subtitle">It has been a long-standing goal of mine to use technology for the greater social good. In an age of social media, it can be overwhelming to see software exploit human tendencies. I want to turn this around and build products that will enhance user experiences and truly make our lives better.</p>
-					<p class="subtitle">Away from the computer, you likely find me cuddling with my cat Tigger, drinking an iced latte, or eating lots of yummy food.</p>
+					<p class="subtitle">Away from the computer, you will likely find me chilling out with my cat Tigger, drinking an iced latte, or eating lots of yummy food.</p>
 					<p class="subtitle">Say hi over on <a class="hoverBold" href="https://www.linkedin.com/in/benjamin-dinh/">LinkedIn</a> or <a class="hoverBold" href="mailto:benjamindinh909@gmail.com">email</a>, I would love to chat!</p>
 				</div>
 				<div id="profileImage" >
@@ -307,7 +307,6 @@
 			$('.subtitle').click(function(j) {
 				var dropDown = $(this).closest('.projectArchive').find('.acc__panel');
 				// $(this).closest('.acc').find('.acc__panel').not(dropDown).slideUp();
-				
 				if ($(this).hasClass('active')) {
 				$(this).removeClass('active');
 				} 
