done at last. hurray

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<!-- style -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="main.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css">
 		
 		<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   		<link rel="stylesheet" href="/resources/demos/style.css">
@@ -80,7 +80,7 @@
 								<div class="projecttag">Sklearn</div>
 							</div>
 							<div class="projectbuttons">
-								<a class="fa fa-github" href="https://github.com/benjamin-dinh/tweet-sentiment-analysis/blob/main/tweet_sentiment_analysis.ipynb"></a>
+								<i class="fab fa-github" href="https://github.com/benjamin-dinh/tweet-sentiment-analysis/blob/main/tweet_sentiment_analysis.ipynb"></i>
 							</div>
 						</div>
 					</div>
@@ -98,7 +98,7 @@
 								<div class="projecttag">GSON</div>
 							</div>
 							<div class="projectbuttons">
-								<a class="fa fa-github" href="https://github.com/benjamin-dinh/IETAndroidAppProject"></a>
+								<i class="fab fa-github" href="https://github.com/benjamin-dinh/IETAndroidAppProject"></i>
 								<!-- <a class="fa fa-external-link-square" href="https://drive.google.com/file/d/1vH078U3TXIbzWwnw4dqZkSJPtS7ijEUe/view?usp=sharing"></a> -->
 							</div>
 						</div>
@@ -119,8 +119,8 @@
 								<div class="projecttag">NodeJS</div>
 							</div>
 							<div class="projectbuttons">
-								<a class="fa fa-github" href="https://github.com/benjamin-dinh/include-website"></a>
-								<a class="fa fa-paperclip" href="https://include-website.herokuapp.com/"></a>
+								<i class="fab fa-github" href="https://github.com/benjamin-dinh/include-website"></i>
+								<i class="fas fa-external-link-alt" href="https://include-website.herokuapp.com/"></i>
 							</div>
 						</div>
 					</div>
@@ -138,8 +138,8 @@
 								<div class="projecttag">Figma</div>
 							</div>
 							<div class="projectbuttons">
-								<a class="fa fa-github" href="https://github.com/benjamin-dinh/ucdavis-yearbook"></a>
-								<a class="fa fa-paperclip" href="https://hazel-boundless-yearbook.glitch.me"></a>
+								<i class="fab fa-github" href="https://github.com/benjamin-dinh/ucdavis-yearbook"></i>
+								<i class="fas fa-external-link-alt" href="https://hazel-boundless-yearbook.glitch.me"></i>
 							</div>
 						</div>
 					</div>
@@ -160,7 +160,7 @@
 									<div class="projecttag">Sklearn</div>
 								</div>
 								<div class="projectbuttons">
-									<a class="fa fa-github" href="https://github.com/benjamin-dinh/fruit-classification/blob/main/fruit_classification.ipynb"></a>
+									<i class="fab fa-github" href="https://github.com/benjamin-dinh/fruit-classification/blob/main/fruit_classification.ipynb"></i>
 								</div>
 							</div>
 						</div>
@@ -175,7 +175,7 @@
 									<div class="projecttag">BeautifulSoup</div>
 								</div>
 								<div class="projectbuttons">
-									<a class="fa fa-github" href="https://github.com/benjamin-dinh/imdb-webscraper/blob/main/imdb_webscraper.ipynb"></a>
+									<i class="fab fa-github" href="https://github.com/benjamin-dinh/imdb-webscraper/blob/main/imdb_webscraper.ipynb"></i>
 								</div>
 							</div>
 						</div>
@@ -191,8 +191,8 @@
 									<div class="projecttag">JavaScript</div>
 								</div>
 								<div class="projectbuttons">
-									<a class="fa fa-github" href="https://github.com/benjamin-dinh/museum-website"></a>
-									<a class="fa fa-paperclip" href="https://shore-conscious-supply.glitch.me/"></a>
+									<i class="fab fa-github" href="https://github.com/benjamin-dinh/museum-website"></i>
+									<i class="fas fa-external-link-alt" href="https://shore-conscious-supply.glitch.me/"></i>
 								</div>
 							</div>
 						</div>
@@ -210,7 +210,7 @@
 									<div class="projecttag">Sklearn</div>
 								</div>
 								<div class="projectbuttons">
-									<a class="fa fa-github" href="https://github.com/benjamin-dinh/automobile-price-regression/blob/main/regression_models.ipynb"></a>
+									<i class="fab fa-github" href="https://github.com/benjamin-dinh/automobile-price-regression/blob/main/regression_models.ipynb"></i>
 								</div>
 							</div>
 						</div>
@@ -228,8 +228,8 @@
 									<div class="projecttag">SQLite3</div>
 								</div>
 								<div class="projectbuttons">
-									<a class="fa fa-github" href="https://github.com/benjamin-dinh/postcard-creator-v2"></a>
-									<a class="fa fa-paperclick" href="https://foggy-climbing-carob.glitch.me/"></a>
+									<i class="fab fa-github" href="https://github.com/benjamin-dinh/postcard-creator-v2"></i>
+									<i class="fas fa-external-link-alt" href="https://foggy-climbing-carob.glitch.me/"></i>
 								</div>
 							</div>
 						</div>
@@ -243,7 +243,7 @@
 									<div class="projecttag">C++</div>
 								</div>
 								<div class="projectbuttons">
-									<a class="fa fa-github" href="https://github.com/benjamin-dinh/spellchecker-trie"></a>
+									<i class="fab fa-github" href="https://github.com/benjamin-dinh/spellchecker-trie"></i>
 								</div>
 							</div>
 						</div>
