--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			</div>
 		</section>
 		<div class="arrow bounce">
-				<a href = "#work" class="fa fa-angle-down fa-3x"></a>
+				<i href = "#work" class="fa fa-angle-down fa-3x"></i>
 		</div>
 		<a id="work"></a>
 		<section>
