--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 			</nav>
 		</div>
 		<div id="rightIcons">
-			<a href="https://www.linkedin.com/in/benjamin-dinh/" class="fa fa-linkedin"></a>
-			<a href="https://github.com/benjamin-dinh" class="fa fa-github"></a>
-			<a href="https://www.behance.net/benjamin-dinh" class="fa fa-behance"></a>
-			<a href="mailto:benjamindinh909@gmail.com" class="fa fa-envelope"></a>
+			<i href="https://www.linkedin.com/in/benjamin-dinh/" class="fab fa-linkedin"></i>
+			<i href="https://github.com/benjamin-dinh" class="fab fa-github"></i>
+			<i href="https://www.behance.net/benjamin-dinh" class="fab fa-behance"></i>
+			<i href="mailto:benjamindinh909@gmail.com" class="fa fa-envelope"></i>
 			<div class="vl"></div>
 		</div>
 		
@@ -270,10 +270,10 @@
 		
 		<section id="footer">
 			<div id="bottomIcons">
-				<a href="https://www.linkedin.com/in/benjamin-dinh/" class="fa fa-linkedin"></a>
-				<a href="https://github.com/benjamin-dinh" class="fa fa-github"></a>
-				<a href="https://www.behance.net/benjamin-dinh" class="fa fa-behance"></a>
-				<a href="mailto:benjamindinh909@gmail.com" class="fa fa-envelope"></a>
+				<i href="https://www.linkedin.com/in/benjamin-dinh/" class="fab fa-linkedin"></i>
+				<i href="https://github.com/benjamin-dinh" class="fab fa-github"></i>
+				<i href="https://www.behance.net/benjamin-dinh" class="fab fa-behance"></i>
+				<i href="mailto:benjamindinh909@gmail.com" class="fa fa-envelope"></i>
 			</div>
 			<p id ="footerFont">© 2020 Benjamin Dinh </p>
 		</section>
