--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 			</nav>
 		</div>
 		<div id="rightIcons">
-			<i href="https://www.linkedin.com/in/benjamin-dinh/" class="fab fa-linkedin"></i>
-			<i href="https://github.com/benjamin-dinh" class="fab fa-github"></i>
-			<i href="https://www.behance.net/benjamin-dinh" class="fab fa-behance"></i>
-			<i href="mailto:benjamindinh909@gmail.com" class="fa fa-envelope"></i>
+			<a href="https://www.linkedin.com/in/benjamin-dinh/" class="fab fa-linkedin"></a>
+			<a href="https://github.com/benjamin-dinh" class="fab fa-github"></a>
+			<a href="https://www.behance.net/benjamin-dinh" class="fab fa-behance"></a>
+			<a href="mailto:benjamindinh909@gmail.com" class="fa fa-envelope"></a>
 			<div class="vl"></div>
 		</div>
 		
@@ -59,7 +59,7 @@
 			</div>
 		</section>
 		<div class="arrow bounce">
-				<i href = "#work" class="fa fa-angle-down fa-3x"></i>
+				<a href = "#work" class="fa fa-angle-down fa-3x"></a>
 		</div>
 		<a id="work"></a>
 		<section>
@@ -80,7 +80,7 @@
 								<div class="projecttag">Sklearn</div>
 							</div>
 							<div class="projectbuttons">
-								<i class="fab fa-github" href="https://github.com/benjamin-dinh/tweet-sentiment-analysis/blob/main/tweet_sentiment_analysis.ipynb"></i>
+								<a class="fab fa-github" href="https://github.com/benjamin-dinh/tweet-sentiment-analysis/blob/main/tweet_sentiment_analysis.ipynb"></a>
 							</div>
 						</div>
 					</div>
@@ -98,7 +98,7 @@
 								<div class="projecttag">GSON</div>
 							</div>
 							<div class="projectbuttons">
-								<i class="fab fa-github" href="https://github.com/benjamin-dinh/IETAndroidAppProject"></i>
+								<a class="fab fa-github" href="https://github.com/benjamin-dinh/IETAndroidAppProject"></a>
 								<!-- <a class="fa fa-external-link-square" href="https://drive.google.com/file/d/1vH078U3TXIbzWwnw4dqZkSJPtS7ijEUe/view?usp=sharing"></a> -->
 							</div>
 						</div>
@@ -119,8 +119,8 @@
 								<div class="projecttag">NodeJS</div>
 							</div>
 							<div class="projectbuttons">
-								<i class="fab fa-github" href="https://github.com/benjamin-dinh/include-website"></i>
-								<i class="fas fa-external-link-alt" href="https://include-website.herokuapp.com/"></i>
+								<a class="fab fa-github" href="https://github.com/benjamin-dinh/include-website"></a>
+								<a class="fas fa-external-link-alt" href="https://include-website.herokuapp.com/"></a>
 							</div>
 						</div>
 					</div>
@@ -138,8 +138,8 @@
 								<div class="projecttag">Figma</div>
 							</div>
 							<div class="projectbuttons">
-								<i class="fab fa-github" href="https://github.com/benjamin-dinh/ucdavis-yearbook"></i>
-								<i class="fas fa-external-link-alt" href="https://hazel-boundless-yearbook.glitch.me"></i>
+								<a class="fab fa-github" href="https://github.com/benjamin-dinh/ucdavis-yearbook"></a>
+								<a class="fas fa-external-link-alt" href="https://hazel-boundless-yearbook.glitch.me"></a>
 							</div>
 						</div>
 					</div>
@@ -160,7 +160,7 @@
 									<div class="projecttag">Sklearn</div>
 								</div>
 								<div class="projectbuttons">
-									<i class="fab fa-github" href="https://github.com/benjamin-dinh/fruit-classification/blob/main/fruit_classification.ipynb"></i>
+									<a class="fab fa-github" href="https://github.com/benjamin-dinh/fruit-classification/blob/main/fruit_classification.ipynb"></a>
 								</div>
 							</div>
 						</div>
@@ -175,7 +175,7 @@
 									<div class="projecttag">BeautifulSoup</div>
 								</div>
 								<div class="projectbuttons">
-									<i class="fab fa-github" href="https://github.com/benjamin-dinh/imdb-webscraper/blob/main/imdb_webscraper.ipynb"></i>
+									<a class="fab fa-github" href="https://github.com/benjamin-dinh/imdb-webscraper/blob/main/imdb_webscraper.ipynb"></a>
 								</div>
 							</div>
 						</div>
@@ -191,8 +191,8 @@
 									<div class="projecttag">JavaScript</div>
 								</div>
 								<div class="projectbuttons">
-									<i class="fab fa-github" href="https://github.com/benjamin-dinh/museum-website"></i>
-									<i class="fas fa-external-link-alt" href="https://shore-conscious-supply.glitch.me/"></i>
+									<a class="fab fa-github" href="https://github.com/benjamin-dinh/museum-website"></a>
+									<a class="fas fa-external-link-alt" href="https://shore-conscious-supply.glitch.me/"></a>
 								</div>
 							</div>
 						</div>
@@ -210,7 +210,7 @@
 									<div class="projecttag">Sklearn</div>
 								</div>
 								<div class="projectbuttons">
-									<i class="fab fa-github" href="https://github.com/benjamin-dinh/automobile-price-regression/blob/main/regression_models.ipynb"></i>
+									<a class="fab fa-github" href="https://github.com/benjamin-dinh/automobile-price-regression/blob/main/regression_models.ipynb"></a>
 								</div>
 							</div>
 						</div>
@@ -228,8 +228,8 @@
 									<div class="projecttag">SQLite3</div>
 								</div>
 								<div class="projectbuttons">
-									<i class="fab fa-github" href="https://github.com/benjamin-dinh/postcard-creator-v2"></i>
-									<i class="fas fa-external-link-alt" href="https://foggy-climbing-carob.glitch.me/"></i>
+									<a class="fab fa-github" href="https://github.com/benjamin-dinh/postcard-creator-v2"></a>
+									<a class="fas fa-external-link-alt" href="https://foggy-climbing-carob.glitch.me/"></a>
 								</div>
 							</div>
 						</div>
@@ -243,7 +243,7 @@
 									<div class="projecttag">C++</div>
 								</div>
 								<div class="projectbuttons">
-									<i class="fab fa-github" href="https://github.com/benjamin-dinh/spellchecker-trie"></i>
+									<a class="fab fa-github" href="https://github.com/benjamin-dinh/spellchecker-trie"></a>
 								</div>
 							</div>
 						</div>
@@ -270,10 +270,10 @@
 		
 		<section id="footer">
 			<div id="bottomIcons">
-				<i href="https://www.linkedin.com/in/benjamin-dinh/" class="fab fa-linkedin"></i>
-				<i href="https://github.com/benjamin-dinh" class="fab fa-github"></i>
-				<i href="https://www.behance.net/benjamin-dinh" class="fab fa-behance"></i>
-				<i href="mailto:benjamindinh909@gmail.com" class="fa fa-envelope"></i>
+				<a href="https://www.linkedin.com/in/benjamin-dinh/" class="fab fa-linkedin"></a>
+				<a href="https://github.com/benjamin-dinh" class="fab fa-github"></a>
+				<a href="https://www.behance.net/benjamin-dinh" class="fab fa-behance"></a>
+				<a href="mailto:benjamindinh909@gmail.com" class="fa fa-envelope"></a>
 			</div>
 			<p id ="footerFont">© 2020 Benjamin Dinh </p>
 		</section>
