--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 				<div id="profileText">
 					<h2 class="increaseLineHeight">Nice to meet you!</h2>
 					<p class="subtitle">I'm Benjamin and I'm a third year at University of California, Davis studying Computer Science with an intended minor in Communications. My interests lie in making technology widely accessible and delivering unique product experiences.</p>
-					<p class="subtitle">It has been a long-standing goal of mine to use technology for the greater social good. In an age of social media, it can be overwhelming to see software exploit human tendencies. I want to turn this around and build products that will enhance user experiences and truly make our lives better.</p>
+					<p class="subtitle">It has been a long-standing goal of mine to use technology for the greater good of society. In an age of social media, it can be overwhelming to see software exploit human tendencies. I want to turn this around and build products that will enhance user experiences and truly make our lives better.</p>
 					<p class="subtitle">Away from the computer, you will likely find me chilling out with my cat Tigger, drinking an iced latte, or eating lots of yummy food.</p>
 					<p class="subtitle">Say hi over on <a class="hoverBold" href="https://www.linkedin.com/in/benjamin-dinh/" target = "_blank">LinkedIn</a> or <a class="hoverBold" href="mailto:benjamindinh909@gmail.com">email</a>, I would love to chat!</p>
 				</div>
