website redesign done ✨

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 			<a href="https://www.linkedin.com/in/benjamin-dinh/" class="fab fa-linkedin"></a>
 			<a href="https://github.com/benjamin-dinh" class="fab fa-github"></a>
 			<a href="https://www.behance.net/benjamin-dinh" class="fab fa-behance"></a>
+			<a href="https://www.instagram.com/tiggersparty/" class="fab fa-instagram"></a>
 			<a href="mailto:benjamindinh909@gmail.com" class="fa fa-envelope"></a>
 			<div class="vl"></div>
 		</div>
@@ -99,7 +100,6 @@
 							</div>
 							<div class="projectbuttons">
 								<a class="fab fa-github" href="https://github.com/benjamin-dinh/IETAndroidAppProject"></a>
-								<a class="fas fa-external-link-alt" href="https://drive.google.com/file/d/1vH078U3TXIbzWwnw4dqZkSJPtS7ijEUe/view?usp=sharing"></a>
 							</div>
 						</div>
 					</div>
