website redesign done ✨

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<div id="rightIcons">
 			<a href="https://www.linkedin.com/in/benjamin-dinh/" class="fab fa-linkedin"></a>
 			<a href="https://github.com/benjamin-dinh" class="fab fa-github"></a>
-			<a href="https://www.behance.net/benjamin-dinh" class="fab fa-behance"></a>
+			<a href="https://www.behance.net/gallery/99370465/Personal-Art" class="fab fa-behance"></a>
 			<a href="https://www.instagram.com/tiggersparty/" class="fab fa-instagram"></a>
 			<a href="mailto:benjamindinh909@gmail.com" class="fa fa-envelope"></a>
 			<div class="vl"></div>
