--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 					// $(this).closest('.acc').find('.acc__title.active').removeClass('active');
 					$(this).addClass('active');
 				}
-				dropDown.stop(false, true).slideToggle();
+				dropDown.stop(false, true).slideToggle(200);
 				j.preventDefault();
 			});
 		});
