website redesign done ✨

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 			<p id = "projectSectionTitle">ABOUT ME</p>
 			<div id="profileContainer">
 				<div id="profileText">
-					<h2 class="increaseLineHeight">Nice to meet you!</h2>
+					<h2 class="customsubtitle">Nice to meet you!</h2>
 					<p class="subtitle">I'm Benjamin and I'm a third year at University of California, Davis studying Computer Science with an intended minor in Communications. My interests lie in making technology widely accessible and delivering unique product experiences.</p>
 					<p class="subtitle">It has been a long-standing goal of mine to use technology for the greater good of society. In an age of social media, it can be overwhelming to see software exploit human tendencies. I want to turn this around and build products that will enhance user experiences and truly make our lives better.</p>
 					<p class="subtitle">Away from the computer, you will likely find me chilling with my cat Tigger, drinking an iced latte, or enjoying the great outdoors.</p>
